--- a/outis_post/templates/outis_post/index.html
+++ b/outis_post/templates/outis_post/index.html
@@ -1,1 +1,46 @@
-Post-Index-Here
+
+{% extends 'outis_base/base.html' %}
+
+{% block outis_title %}
+Post-Index
+{% endblock %}
+
+{% block outis_staticfiles %}
+	{% load staticfiles %}
+	<link type="text/css" rel="stylesheet" href="{% static '/css/index.css' %}">
+{% endblock %}
+
+{% block outis_body %}
+	<p><a href="{% url 'post:post-add' %}">Add Post</a><p>
+	<p><a href="#">Add ........</a><p>
+	<hr>
+
+	{% for post in all_post %}
+	<ul>
+		<li>
+			<a href="{% url 'post:detail' post.id %}">{{ post.title }}</a>&nbsp;
+			
+			<!-- Update -->
+			<form action="{% url 'post:post-update' post.id %}" method="post" style="display:inline;">
+				{% csrf_token %}
+				<button type="submit" class="btn btn-default">
+					<span class="glyphicon glyphicon-pencil"></span>
+				</button>
+			</form>
+
+			<!-- Delete -->
+			<form action="{% url 'post:post-delete' post.id %}" method="post" style="display:inline;">
+				{% csrf_token %}
+				<button type="submit" class="btn btn-default">
+					<span class="glyphicon glyphicon-trash"></span>
+				</button>
+			</form>
+			
+		</li>
+	</ul>
+
+	{% endfor %}
+
+
+{% endblock %}
+
