--- a/outis_post/templates/outis_post/detail.html
+++ b/outis_post/templates/outis_post/detail.html
@@ -11,37 +11,11 @@
 				<div class="panel-body">
 
 					<form class="form-horizontal" action="" method="post" enctype="multipart/form-data">
-						{% csrf_token %}
-
-						<div class="form-group">
-							<label class="control-label col-sm-2">Title</label>
-							<div class="col-sm-10">{{ object.title }}</div>
-						</div>
-
-						<div class="form-group">
-							<label class="control-label col-sm-2">Link</label>
-							<div class="col-sm-10">{{ object.link }}</div>
-						</div>
-
-						<div class="form-group">
-							<label class="control-label col-sm-2">Description</label>
-							<div class="col-sm-10">{{ object.description }}</div>
-						</div>
-
-						<div class="form-group">
-							<label class="control-label col-sm-2">Tag</label>
-							<div class="col-sm-10">{{ object.tag }}</div>
-						</div>
-
-
-						<div class="form-group">
-							<label class="control-label col-sm-2">Attraction</label>
-							<div class="col-sm-10">
-                                <img src="uploads/{{ object.attraction }}"/>
-                            </div>
-						</div>
-
-
+                        <h1>{{ object.title}}</h1>
+                        <p>Category: {{ object.category_id}}</p>
+                        <p>Link: <a href="{{ object.link}}">Link</a></p>
+                        <p>Description: {{ object.description }}</p>
+                        <p>Tag: {{ object.tag }}</p>
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
 								<button type="submit" value="Update" class="btn btn-success">Update</button>
