--- a/outis_post/templates/outis_post/index.html
+++ b/outis_post/templates/outis_post/index.html
@@ -5,9 +5,15 @@
 Post-Index
 {% endblock %}
 
+{% load humanize i18n %}
+
 {% block outis_staticfiles %}
-	{% load staticfiles %}
-	<link type="text/css" rel="stylesheet" href="{% static '/css/index.css' %}">
+{% load staticfiles %}
+    <script src="{% static '/js/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static '/js/masonry.pkgd.min.js' %}"></script>
+
+	<link type="text/css" rel="stylesheet" href="{% static '/css/index.css' %}" />
+    <script src="{% static '/js/index.js' %}"></script>
 {% endblock %}
 
 {% block outis_body %}
@@ -15,32 +21,49 @@ Post-Index
 	<p><a href="#">Add ........</a><p>
 	<hr>
 
+    <div id="container">
 	{% for post in all_post %}
-	<ul>
-		<li>
-			<a href="{% url 'post:detail' post.id %}">{{ post.title }}</a>&nbsp;
-			
-			<!-- Update -->
-			<form action="{% url 'post:post-update' post.id %}" method="post" style="display:inline;">
-				{% csrf_token %}
-				<button type="submit" class="btn btn-default">
-					<span class="glyphicon glyphicon-pencil"></span>
-				</button>
-			</form>
+        <div class="postBlock">
+            <div class="imgShell">
+                <a href="{% url 'post:detail' post.id %}">
+                    <img class="outisimg" src="{{ MEDIA_URL }}{{ post.attraction }}" width="33%" />
+                </a>
+            </div>
 
-			<!-- Delete -->
-			<form action="{% url 'post:post-delete' post.id %}" method="post" style="display:inline;">
-				{% csrf_token %}
-				<button type="submit" class="btn btn-default">
-					<span class="glyphicon glyphicon-trash"></span>
-				</button>
-			</form>
-			
-		</li>
-	</ul>
+            <div class="stuff">
+                <h3>
+                    <a href="{% url 'post:detail' post.id %}">
+                        {{ post.title }}
+                    </a>
+                </h3>
 
+                <div>{{ post.description }}</div>
+
+                <div id="operations">
+                    <!-- Update -->
+                    <div>
+                        <a href="{% url 'post:post-update' post.id %}">
+                            <button  class="btn btn-default">
+                                <span class="glyphicon glyphicon-pencil">Update</span>
+                            </button>
+                        </a>
+
+                    <!-- Delete -->
+                        <a href="{% url 'post:post-delete' post.id %}">
+                            <button  class="btn btn-default">
+                                <span class="glyphicon glyphicon-trash">Delete</span>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 	{% endfor %}
-
+	</div>
+</div>
 
 {% endblock %}
+
+
+
 
