--- a/outis_base/templates/outis_base/base.html
+++ b/outis_base/templates/outis_base/base.html
@@ -48,11 +48,11 @@
 
 				</ul>
 
-				<form class="navbar-form navbar-left" role="search" method="get" action="#">
+				<form class="navbar-form navbar-left"  method="get" action="{% url 'post:titleSearch' %}">
 					<div class="form-group">
 						<input type="text" class="form-control" name="q" value="">
 					</div>
-					<button type="button" class="btn btn-default">Search</button>
+					<input type="submit" class="btn btn-default">Search</input>
 				</form>
 					<ul class="nav navbar-nav navbar-right">
 					{% if user.is_authenticated %}
@@ -61,7 +61,7 @@
 					{% else %}
 						<li><a  href="{% url 'user:register' %}">Register</a></li>
 						<li><a  href="{% url 'user:login' %}">Login</a></li>
-					{% endif %}				
+					{% endif %}
 
 					</ul>
 
@@ -74,4 +74,4 @@
 
 </body>
 </html>
-	
+
