--- a/outis_post/static/css/index.css
+++ b/outis_post/static/css/index.css
@@ -1,3 +1,64 @@
-.navbar{
-	border-radius: 0;
+html, body {
+    margin:0px;
+    padding: 10px;
+
 }
+
+#container {
+    padding: 5px;
+}
+
+.postBlock {
+    display: inline;
+    float: left;
+    width: 30%;
+    height: 30%;
+}
+
+.stuff {
+    display: inline;
+    float: left;
+    width: 30%;
+    height: 30%;
+
+}
+
+.imgShell  {
+    width: 100%;
+    height: 100%;
+}
+
+.imgShell img {
+    width: 100%;
+    height: 100%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
