change base template into a better design

--- a/outis_base/templates/outis_base/index.html
+++ b/outis_base/templates/outis_base/index.html
@@ -1,5 +1,9 @@
 {% include 'outis_base/base.html' %}
 {% block outis_title %}
-Index Here</h1>
+<div class="jumbotron">
+    <div class="container">
+        <h1>Index Here</h1>
+    </div>
+</div>
 {% endblock %}
 
