--- a/outis_base/templates/outis_base/base.html
+++ b/outis_base/templates/outis_base/base.html
@@ -31,20 +31,31 @@
 			<nav class="collapse navbar-collapse" id="topNavBar">
 				<ul class="nav navbar-nav">
 
-					<li class="active">
-						<a  href="{% url 'index' %}">
+					<li>
+						<a  href="{% url 'post:index' %}">
 							<span class="glyphicon glyphicon-home"></span>&nbsp;Home
-
 						</a>
 					</li>
 
 
 					<li>
-						<a  href="{% url 'post:index' %}">
-							<span class="glyphicon glyphicon-music"></span>&nbsp;Misc
-
+						<a  href="{% url 'post:music' %}">
+							<span class="glyphicon glyphicon-music"></span>&nbsp;Music
 						</a>
 					</li>
+
+					<li>
+						<a  href="{% url 'post:video' %}">
+							<span class="glyphicon glyphicon-facetime-video"></span>&nbsp;Video
+						</a>
+					</li>
+
+					<li>
+						<a  href="{% url 'post:misc' %}">
+							<span class="glyphicon glyphicon-th-large"></span>&nbsp;Misc
+						</a>
+					</li>
+
 
 				</ul>
 
@@ -71,7 +82,6 @@
 
 {% block outis_body %}
 {% endblock %}
-
 </body>
 </html>
 
