finished user post collection and add font-awesome-4.7.0

--- a/outis_base/templates/outis_base/base.html
+++ b/outis_base/templates/outis_base/base.html
@@ -9,6 +9,8 @@
 	<script type="text/javascript" src="{% static '/bootstrap-3.3.7-dist/js/bootstrap.js' %}"></script>
 
 	<link type="text/css" rel="stylesheet" href="{% static '/bootstrap-3.3.7-dist/css/bootstrap.css' %}">
+	<link type="text/css" rel="stylesheet" href="{% static '/font-awesome-4.7.0/css/font-awesome.min.css' %}">
+
 	<link type="text/css" rel="stylesheet" href="{% static '/css/base.css' %}">
 
 	{% block outis_staticfiles %}
@@ -82,6 +84,7 @@
         </nav>
     </div>
 </header>
+
 
 <div id="mainContentDiv">
     {% block outis_body %}
