--- a/outis_base/static/css/base.css
+++ b/outis_base/static/css/base.css
@@ -5,10 +5,12 @@
 
 body {
     background:#F8F8F8;
+    padding-top: 70px;
+    //padding-bottom: 50px;
 }
 
 
-.navbar {
+.navbar input {
 	border-radius: 0;
 }
 
@@ -22,5 +24,5 @@ body {
 }
 
 #mainContentDiv {
-    margin-top:0;
+    padding:25px;
 }
