--- a/outis_user/templates/outis_user/profile.html
+++ b/outis_user/templates/outis_user/profile.html
@@ -14,34 +14,36 @@ Profile
 {% block outis_body %}
 <div class="container-fluid">
     <div id="userProfile" class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             {% if user.is_authenticated %}
-                <span id="username_span">{{ user.username }}</span>
+            <span><img src="{{ MEDIA_URL }}{{ user.logo }}"></img></span>
+            <span id="username_span">{{ user.username }}</span>
             {% endif %}
-            &nbsp;&nbsp;&nbsp;
         </div>
 
-        <div class="dropdown col-md-1" >
-          <a class="dropdown-toggle" type="button" id="profileConfigDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <i class="fa fa-cog fa-3x"></i>
-          </a>
+        <div class="dropdown col-md-2" >
+            <a class="dropdown-toggle" type="button" id="profileConfigDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <i class="fa fa-cog fa-3x"></i>
+            </a>
 
-          <ul class="dropdown-menu" aria-labelledby="profileConfigDropdown">
-            <li><a href="#">Change Profile</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Destroy My Account</a></li>
-          </ul>
+            <ul class="dropdown-menu" aria-labelledby="profileConfigDropdown">
+                <li><a href="#">Change Profile</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Destroy My Account</a></li>
+            </ul>
         </div>
 
+        <div class="col-md-6"><div>
     </div>
 </div>
+</div>
+
+<br>
 
 
-
-
-<div class="container-fluid" id="contentContainer" >
+<div class="container-fluid" id="contentContainer">
     <div class="row" >
         <div class="col-md-3"><span></span></div>
         <div class="col-md-6">
@@ -51,7 +53,10 @@ Profile
                 <li class="relatedLink">
                     <a id="postCollection" href="javascript:void(0);" onclick="postCollectionClick()">Post</a>
                 </li>
-                <li class="relatedLink"><a id="peopleCollection">People</a></li>
+
+                <li class="relatedLink">
+                    <a id="peopleCollection" href="javascript:void(0);" onclick="peopleCollectionClick()">People</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-3"><span></span></div>
