finished delete post collect

--- a/outis_post/templates/outis_post/foo.html
+++ b/outis_post/templates/outis_post/foo.html
@@ -1,3 +1,4 @@
-<p>{{ post.title }}<p>
-{{ post.description }}
-{{ post.attraction }}
+<p>Foo</p>
+<p>{{ object.title }}</p>
+{{ object.description }}
+{{ object.attraction }}
