--- a/outis_post/static/css/index.css
+++ b/outis_post/static/css/index.css
@@ -1,43 +1,19 @@
-html, body {
-    margin:0px;
-    padding: 10px;
 
-}
-
-#container {
-    padding: 5px;
-}
-
-.postBlock {
-    display: inline;
+.container-fluid {
+    padding: 20px;
     float: left;
-    width: 30%;
-    height: 30%;
 }
 
-.stuff {
-    display: inline;
+.grid-item {
+    margin-bottom: 20px;
     float: left;
-    width: 30%;
-    height: 30%;
-
+    width: 220px;
+    display: inline;
 }
 
-.imgShell  {
-    width: 100%;
-    height: 100%;
+.grid-item img {
+    max-width: 100%
 }
-
-.imgShell img {
-    width: 100%;
-    height: 100%;
-
-}
-
-
-
-
-
 
 
 
