--- a/outis_post/templates/outis_post/index.html
+++ b/outis_post/templates/outis_post/index.html
@@ -9,8 +9,8 @@ POST
 
 {% block outis_staticfiles %}
 {% load staticfiles %}
-    <script src="{% static '/js/imagesloaded.pkgd.min.js' %}"></script>
-    <script src="{% static '/js/masonry.pkgd.min.js' %}"></script>
+    <script src="{% static '/js/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
+    <script src="{% static '/js/masonry/masonry.pkgd.min.js' %}"></script>
 
 	<link type="text/css" rel="stylesheet" href="{% static '/css/index.css' %}" />
     <script src="{% static '/js/index.js' %}"></script>
@@ -18,36 +18,46 @@ POST
 
 {% block outis_body %}
 
-    <div id="container">
-	{% for post in all_post %}
-        <div class="postBlock">
-            <div class="imgShell">
-                <a href="{% url 'post:detail' post.id %}">
-                    <img class="outisimg" src="{{ MEDIA_URL }}{{ post.attraction }}" width="33%" />
-                </a>
-            </div>
-
-            <div class="stuff">
-                <h3>
-                    <a href="{% url 'post:detail' post.id %}">
-                        {{ post.title }}
-                    </a>
-                </h3>
-
-                <div>{{ post.description }}</div>
-                <div><a href="{{ post.link}}">{{ post.link}}</a></div>
-            </div>
-
+<div id="postContainer" class="grid container-fluid">
+{% for post in all_post %}
+    <div class="grid-item" >
+        <div class="imgShell">
+            <a href="{% url 'post:detail' post.id %}">
+                <img class="outisimg" src="{{ MEDIA_URL }}{{ post.attraction }}" width="33%" />
+            </a>
         </div>
-	{% endfor %}
-	</div>
+
+        <div class="stuff">
+            <span>
+                <a href="{% url 'post:detail' post.id %}">
+                    {{ post.title }}
+                </a>
+            </span>
+
+            <div>{{ post.description }}</div>
+            <div><a href="{{ post.link}}">{{ post.link}}</a></div>
+        </div>
+
+    </div>
+{% endfor %}
 </div>
+
 
 <div style="position:fixed; right:45px; bottom:45px;">
     <a href="{% url 'post:post-add' %}">
         <i class="fa fa-plus-circle fa-3x" aria-hidden="true" title="Add Post"></i>
     </a>
 </div>
+
+
+{% for result in page.object_list %}
+    <p>
+        <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
+    </p>
+{% empty %}
+    <p>No results found.</p>
+{% endfor %}
+
 
 
 {% endblock %}
