--- a/outis_user/templates/outis_user/profile.html
+++ b/outis_user/templates/outis_user/profile.html
@@ -49,7 +49,12 @@ Profile
         <div class="col-md-6">
             <ul class="nav nav-pills nav-justified">
                 {% csrf_token %}
-                <li class="relatedLink activeButton"><a id="generateRelation">Link</a></li>
+                <!--<li class="relatedLink activeButton"><a id="generateRelation">Link</a></li>-->
+
+                <li class="relatedLink">
+                    <a id="myPost" href="javascript:void(0);" onclick="allMyPostClick()">All My Post</a>
+                </li>
+
                 <li class="relatedLink">
                     <a id="postCollection" href="javascript:void(0);" onclick="postCollectionClick()">Post</a>
                 </li>
