finished destroy user account

--- a/outis_base/templates/outis_base/base.html
+++ b/outis_base/templates/outis_base/base.html
@@ -59,11 +59,13 @@
                     </a>
                 </li>
 
+            </ul>
 
-                <li>
+            <ul class="nav navbar-nav col-md-5">
+                <li style="width:100%;">
                     <form class="navbar-form form-search" method="get" action="{% url 'post:titleSearch' %}">
-                        <div class="form-group">
-                            <input type="text" class="form-control input-medium search-query"
+                        <div class="form-group" style="width:100%;">
+                            <input type="text" class="form-control input-medium search-query" style="width:100%;"
                                 name="q"  laceholder="Search">
                         </div>
                     </form>
