--- a/outis_user/templates/outis_user/profile.html
+++ b/outis_user/templates/outis_user/profile.html
@@ -28,10 +28,8 @@ Profile
 
             <ul class="dropdown-menu" aria-labelledby="profileConfigDropdown">
                 <li><a href="#">Change Profile</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Destroy My Account</a></li>
+                <li><a href="javascript:void(0);" onclick="destroyMyAccount()">Destroy My Account</a></li>
             </ul>
         </div>
 
