--- a/outis_base/templates/outis_base/base.html
+++ b/outis_base/templates/outis_base/base.html
@@ -61,7 +61,7 @@
 
             </ul>
 
-            <ul class="nav navbar-nav col-md-5">
+            <ul class="nav navbar-nav col-md-5" style="display:none;">
                 <li style="width:100%;">
                     <form class="navbar-form form-search" method="get" action="{% url 'post:titleSearch' %}">
                         <div class="form-group" style="width:100%;">
